[metadata]
name = Mask
version = attr: mask.__version__
url = https://github.com/Eastwu5788/Mask
project_urls =
    Document = https://github.com/Eastwu5788/Mask
    Source Code = https://github.com/Eastwu5788/Mask
    Issue = https://github.com/Eastwu5788/Mask/issues
license = MIT
author = Wu Dong
author_email = wudong@eastwu.cn
description = A simple gRPC server just like Flask.
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = mask
package_dir = mask
include_package_data = true
python_requires = >= 3.6
